--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "devDependencies": {
     "@types/node": "20.11.28",
     "@types/react": "18.2.66",
-    "typescript": "5.4.2"
+    "typescript": "^5.4.2"
   }
 }
