--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "bulid": "next bulid",
+    "build": "next build",
     "start": "next start"
   },
   "keywords": [],
