--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@types/node": "20.11.28",
     "@types/react": "18.2.66",
-    "typescript": "^5.4.2"
+    "sass": "^1.72.0",
+    "typescript": "^5.4.2",
+    "typescript-plugin-css-modules": "^5.1.0"
   }
 }
