--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
         "name": "next"
       },
       {
-        "name": "typescript-plugin-css-modules"
+        // "name": "typescript-plugin-css-modules"
       }
     ],
     "paths": {
