프로젝트 명 변경

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-nextjs14",
+  "name": "movie-project-nextjs14",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
