--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@plaiceholder/next": "^3.0.0",
     "next": "^14.1.3",
+    "plaiceholder": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "20.11.28",
