--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "MIT",
   "dependencies": {
     "@plaiceholder/next": "^3.0.0",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^6.5.0",
     "next": "^14.1.3",
+    "next-auth": "^4.24.7",
     "plaiceholder": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
